crates/core/src/run/snapshots/mix_core__run__tests__a_second_run_finds_everything_satisfied_and_does_nothing.snap
---
source: crates/core/src/run/tests.rs
expression: "run.case(&before, &world)"
---
{
  "document": {
    "cancellation": "CANCELLATION_UNSPECIFIED",
    "changes": [],
    "command": "bootstrap",
    "dryRun": false,
    "exit": 0,
    "formatVersion": "1.0",
    "problems": [],
    "request": "request",
    "status": "STATUS_SUCCEEDED",
    "steps": [
      {
        "key": "create-nix-dir",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "ensure a directory",
        "undone": false,
        "verb": "VERB_CREATING"
      },
      {
        "key": "create-nix-var",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "ensure a directory",
        "undone": false,
        "verb": "VERB_CREATING"
      },
      {
        "key": "create-groups",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "ensure a group",
        "undone": false,
        "verb": "VERB_CREATING"
      },
      {
        "key": "write-marker",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "ensure a file",
        "undone": false,
        "verb": "VERB_CREATING"
      },
      {
        "key": "write-nix-conf",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "ensure a file",
        "undone": false,
        "verb": "VERB_CREATING"
      }
    ],
    "waits": [],
    "warnings": []
  },
  "machine": {},
  "performed": []
}
