crates/core/src/run/snapshots/mix_core__run__tests__a_shielded_step_finishes_before_a_stop_takes_effect.snap
---
source: crates/core/src/run/tests.rs
expression: "run.case(&before, &world)"
---
{
  "document": {
    "cancellation": "CANCELLATION_INTERRUPTED",
    "changes": [
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "activate",
        "subject": "/etc/first",
        "undone": true,
        "unknown": []
      }
    ],
    "command": "bootstrap",
    "dryRun": false,
    "exit": 0,
    "formatVersion": "1.0",
    "problems": [],
    "request": "request",
    "status": "STATUS_CANCELLED",
    "steps": [
      {
        "key": "activate",
        "status": "STATUS_SUCCEEDED",
        "subject": "ensure a file",
        "undone": true,
        "verb": "VERB_CREATING"
      }
    ],
    "waits": [],
    "warnings": []
  },
  "machine": {},
  "performed": [
    "PutFile /etc/first",
    "RemoveCreated /etc/first"
  ]
}
